@@ -133,3 +133,4 @@ test302a.mp3, yes, 302: Corrupt mp3 with invalid encoding bit set messing up fra
 test303.mp3, yes, 303: java.lang.NullPointerException when reading a corrupted audio file
 test309.m4a, no, 309: Tag edition fails for m4a file - and corrupts tag
 test308.mp3, no, 308: setId3v2PaddingWillShorten failing
+test613.m4a, no, 316: genre field set as text not number
